--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
   <p>Hello, world2.</p>
+  <button id="myButton">Click here!</button>
+  <script type="text/javascript" src="js/foxcam.js"></script>
+  <input type="file" accept="image/*;capture=camera">
 </body>
 </html>
