YAML employed. Use central stylesheets (no inline css!)

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>foxCam</title>
-    <link rel="stylesheet" type="text/css" href="css/brick-0.9.1.byob.min.css"/>
-    <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/central.css" type="text/css"/>
 </head>
-<body style="margin: 0 0;">
+<body>
   <x-appbar>
     <div>
       <i class="fa fa-chevron-left"></i>
