--- a/index.html
+++ b/index.html
@@ -7,39 +7,37 @@
     <link rel="stylesheet" href="css/central.css" type="text/css"/>
 </head>
 <body>
-  <x-appbar>
-    <div>
-      <i class="fa fa-chevron-left"></i>
+  <x-appbar id="appbar">
+	<div>
+      <i class="fa fa-chevron-left font"></i>
     </div>
     <header>
-      <i class="fa fa-undo"></i>
-      <i class="fa fa-repeat"></i>
+      <i class="fa fa-undo font"></i>
+      <i class="fa fa-repeat font"></i>
     </header>
     <div>
-      <i class="fa fa-star"></i>
+      <i class="fa fa-star font"></i>
     </div>
   </x-appbar>
-  <x-deck>
-      <x-card>
-	      <!--預設不是應該這一頁是首頁？但沒有東西跑出來-->
-          0<span>I'm the first card!</span>
-      </x-card>
-      <x-card>
-          1<span>These cards can contain any markup!</span>
-      </x-card>
-      <x-card>
-          2
-      </x-card>
-  </x-deck>
-  
-  <canvas></canvas>
-  <div id="slider">
-  <x-slider min="-100" max="100" step="5" value="0"></x-slider>
-  </div>
-  
+  <div>
+    <div id="intro-screen" class="page">
+      <ul>
+        <li class="page-toogler" data-page-no="1"><a href="#edit">1</a></li>
+        <li class="page-toogler"><a href="#">2</a></li>
+        <li class="page-toogler"><a href="#">3</a></li>
+        <li class="page-toogler"><a href="#">4</a></li>
+      </ul>
+    </div>
+    <div id="edit-screen" class="page" data-page-no="1">
+      edit page
+    </div>
+  </div>    
   <div id="footer">
-	
+  
   </div>
+  
   <script type="text/javascript" src="js/brick-0.9.1.byob.min.js"></script>
+  <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
+  <script type="text/javascript" src="js/foxcam.js"></script>
 </body>
 </html>
