transition all ready

--- a/index.html
+++ b/index.html
@@ -23,13 +23,22 @@
     <div id="intro-screen" class="page">
       <ul>
         <li class="page-toogler" data-page-no="1"><a href="#edit">1</a></li>
-        <li class="page-toogler"><a href="#">2</a></li>
-        <li class="page-toogler"><a href="#">3</a></li>
-        <li class="page-toogler"><a href="#">4</a></li>
+        <li class="page-toogler" data-page-no="2"><a href="#camera">2</a></li>
+        <li class="page-toogler" data-page-no="3"><a href="#collage">3</a></li>
+        <li class="page-toogler" data-page-no="4"><a href="#setting">4</a></li>
       </ul>
     </div>
     <div id="edit-screen" class="page" data-page-no="1">
       edit page
+    </div>
+	<div id="camera-screen" class="page" data-page-no="2">
+      camera page
+    </div>
+	<div id="collage-screen" class="page" data-page-no="3">
+      collage page
+    </div>
+	<div id="setting-screen" class="page" data-page-no="4">
+      setting page
     </div>
   </div>    
   <div id="footer">
