--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <div>
     <div id="intro-screen" class="page">
       <ul>
-        <li class="page-toogler" data-page-no="1"><a href="#edit">1</a></li>
-        <li class="page-toogler" data-page-no="2"><a href="#camera">2</a></li>
-        <li class="page-toogler" data-page-no="3"><a href="#collage">3</a></li>
-        <li class="page-toogler" data-page-no="4"><a href="#setting">4</a></li>
+        <li class="page-toogler" data-page-no="1" footer-page-no="1"><a href="#edit">1</a></li>
+        <li class="page-toogler" data-page-no="2" footer-page-no="2"><a href="#camera">2</a></li>
+        <li class="page-toogler" data-page-no="3" footer-page-no="3"><a href="#collage">3</a></li>
+        <li class="page-toogler" data-page-no="4" footer-page-no="4"><a href="#setting">4</a></li>
       </ul>
     </div>
     <div id="edit-screen" class="page" data-page-no="1">
@@ -55,7 +55,11 @@
       setting page
     </div>
   </div> 
-  <ul class="edit-footer">
+  <div>
+	<div id=intro-footer>
+	</div>
+	<div id=edit-footer class="footer" footer-page-no="1">
+	  <ul>
         <li>
           <a>
             <i class="fa fa-crop button-fig"></i>
@@ -92,7 +96,18 @@
               <span class="button-title">Stamps</span>
           </a>
         </li>
-  </ul>
+      </ul>
+	</div>
+	<div id=camera-footer class="footer" footer-page-no="2">
+		camera-footer
+	</div>
+	<div id=collage-footer class="footer" footer-page-no="3">
+		collage-footer
+	</div>
+	<div id=setting-footer class="footer" footer-page-no="4">
+		setting-footer
+	</div>
+  </div>
   <script type="text/javascript" src="js/brick-0.9.1.byob.min.js"></script>
   <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
   <script type="text/javascript" src="js/foxcam.js"></script>
