--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     <div id="intro-screen" class="page">
       <ul>
 
-        <li class="page-toogler" data-page-no="1" footer-page-no="1"><a href="#edit">1</a></li>
+        <li class="page-toogler" data-page-no="1" footer-page-no="1"><a href="#edit">edit</a></li>
         <li class="page-toogler" data-page-no="2" footer-page-no="2"><a href="#camera">2</a></li>
         <li class="page-toogler" data-page-no="3" footer-page-no="3"><a href="#collage">3</a></li>
         <li class="page-toogler" data-page-no="4" footer-page-no="4"><a href="#setting">4</a></li>
       </ul>
     </div>
     <div id="edit-screen" class="page" data-page-no="1">
-      <canvas></canvas>
+      <i id="choose-image" class="fa fa-file"></i>
     </div>
 	<div id="camera-screen" class="page" data-page-no="2">
       camera page
