--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
   <div>
     <div id="intro-screen" class="page">
       <ul>
-        <li class="page-toogler" data-page-no="1" footer-page-no="1"><a href="#edit">1</a></li>
+
+        <li class="page-toogler" data-page-no="1" footer-page-no="1"><a href="#edit">edit</a></li>
         <li class="page-toogler" data-page-no="2" footer-page-no="2"><a href="#camera">2</a></li>
         <li class="page-toogler" data-page-no="3" footer-page-no="3"><a href="#collage">3</a></li>
         <li class="page-toogler" data-page-no="4" footer-page-no="4"><a href="#setting">4</a></li>
       </ul>
     </div>
     <div id="edit-screen" class="page" data-page-no="1">
-      <canvas></canvas>
+      <i id="choose-image" class="fa fa-file"></i>
     </div>
-
 	<div id="camera-screen" class="page" data-page-no="2">
       camera page
     </div>
@@ -54,11 +54,12 @@
 	<div id="setting-screen" class="page" data-page-no="4">
       setting page
     </div>
+
   </div> 
   <div>
-	<div id=intro-footer>
+	<div id="intro-footer">
 	</div>
-	<div id=edit-footer class="footer" footer-page-no="1">
+	<div id="edit-footer" class="footer" footer-page-no="1">
 	  <ul>
         <li>
           <a>
@@ -98,13 +99,13 @@
         </li>
       </ul>
 	</div>
-	<div id=camera-footer class="footer" footer-page-no="2">
+	<div id="camera-footer" class="footer" footer-page-no="2">
 		camera-footer
 	</div>
-	<div id=collage-footer class="footer" footer-page-no="3">
+	<div id="collage-footer" class="footer" footer-page-no="3">
 		collage-footer
 	</div>
-	<div id=setting-footer class="footer" footer-page-no="4">
+	<div id="setting-footer" class="footer" footer-page-no="4">
 		setting-footer
 	</div>
   </div>
