I've add Gary's back-button code. But just ignoring the pull request cuz I hate to merge. XD

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
       </ul>
     </div>
     <div id="edit-screen" class="page" data-page-no="1">
-      <i id="choose-image" class="fa fa-file"></i>
+        <div class="inner">
+          <span class="wrapper tappable">
+            <i id="choose-image" class="fa fa-file tappable"></i>
+          </span>
+        </div>
     </div>
 	<div id="camera-screen" class="page" data-page-no="2">
       camera page
@@ -61,37 +65,37 @@
 	</div>
 	<div id="edit-footer" class="footer" footer-page-no="1">
 	  <ul>
-        <li>
+        <li class="tappable">
           <a>
             <i class="fa fa-crop button-fig"></i>
             <span class="button-title">Crop</span>
           </a>
         </li>
-        <li>
+        <li class="tappable">
           <a>
             <i class="fa fa-repeat button-fig"></i>
             <span class="button-title">Rotate</span>
           </a>
         </li>
-        <li>
+        <li class="tappable">
           <a>
             <i class="fa fa-cloud button-fig"></i>
               <span class="button-title">Color</span>
           </a>
         </li>
-        <li>
+        <li class="tappable">
           <a>
             <i class="fa fa-magic button-fig"></i>
               <span class="button-title">Effect</span>
           </a>
         </li>
-        <li>
+        <li class="tappable">
           <a>
             <i class="fa fa-credit-card button-fig"></i>
               <span class="button-title">Frame</span>
           </a>
         </li>
-        <li>
+        <li class="tappable">
           <a>
             <i class="fa fa-heart button-fig"></i>
               <span class="button-title">Stamps</span>
