--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       </ul>
     </div>
     <div id="edit-screen" class="page" data-page-no="1">
+        <canvas id="image-canvas"></canvas>
         <div class="inner">
           <span class="wrapper tappable">
             <i id="choose-image" class="fa fa-file tappable"></i>
