--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
   </div>
   <script type="text/javascript" src="js/brick-0.9.1.byob.min.js"></script>
   <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
+  <script type="text/javascript" src="js/fabric.js.all.min.js"></script>
   <script type="text/javascript" src="js/foxcam.js"></script>
 </body>
 </html>
