--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div id="edit-screen" class="page" data-page-no="2">
-        <canvas id="image-canvas"></canvas>
+        <!-- <canvas id="image-canvas"></canvas> -->
         <div class="inner">
           <span class="wrapper tappable">
             <i id="choose-image" class="fa fa-file tappable"></i>
