--- a/index.html
+++ b/index.html
@@ -181,21 +181,34 @@
           </a>
         </li>
         <div id="scrollBar">
-          <a class="effectButtom">
-            <i class="fa fa-times button-fig"></i>
+          <li class="tappable">
+          <a class="rotateButtom">
+            <i class="fa fa-check button-fig"></i>
           </a>
-          <a class="effectButtom">
-            <i class="fa fa-times button-fig"></i>
+        </li>
+          <li class="tappable">
+          <a class="rotateButtom">
+            <i class="fa fa-check button-fig"></i>
           </a>
-          <a class="effectButtom">
-            <i class="fa fa-times button-fig"></i>
+        </li>
+        <li class="tappable">
+          <a class="rotateButtom">
+            <i class="fa fa-check button-fig"></i>
           </a>
-          <a class="effectButtom">
-            <i class="fa fa-times button-fig"></i>
+        </li>
+        <li class="tappable">
+          <a class="rotateButtom">
+            <i class="fa fa-check button-fig"></i>
           </a>
+        </li>
+        <li class="tappable">
+          <a class="rotateButtom">
+            <i class="fa fa-check button-fig"></i>
+          </a>
+        </li>
         </div>
         <li class="tappable">
-          <a class="effectButtom effect-check">
+          <a class="effectButtom">
             <i class="fa fa-check button-fig"></i>
           </a>
         </li>
