rotate right 90 degree done!

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     <div id="edit-screen" class="page" data-page-no="2">
         <!-- <canvas id="image-canvas"></canvas> -->
+        <div id="image-canvas-wrapper"></div>
         <div class="inner">
           <span class="wrapper tappable">
             <i id="choose-image" class="fa fa-file tappable"></i>
