--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
   <script type="text/javascript" src="js/brick-0.9.1.byob.min.js"></script>
   <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
   <script type="text/javascript" src="js/fabric.js.all.min.js"></script>
+  <script type="text/javascript" src="js/jquery.rotate.1-1.js"></script>
   <script type="text/javascript" src="js/foxcam.js"></script>
 </body>
 </html>
