--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 
     <div id="edit-screen" class="page" data-page-no="2">
         <div id="image-canvas-wrapper"></div>
-        <canvas id="image-canvas"></canvas>
         <div class="inner">
           <span class="wrapper tappable">
             <i id="choose-image" class="fa fa-file tappable"></i>
@@ -114,28 +113,6 @@
       </ul>
 
       <ul id="edit-crop">
-        <li class="tappable">
-          <a class="cropButtom">
-            <i class="fa fa-times button-fig"></i>
-          </a>
-        </li>
-        <li class="tappable">
-          <a class="cropButtom">
-            <i class="fa fa-square-o button-fig"></i>
-              <span class="button-title">Effect</span>
-          </a>
-        </li>
-        <li class="tappable">
-          <a class="cropButtom">
-            <i class="fa fa-square-o button-fig"></i>
-              <span class="button-title">Frame</span>
-          </a>
-        </li>
-        <li class="tappable">
-          <a class="cropButtom">
-            <i class="fa fa-check button-fig"></i>
-          </a>
-        </li>
       </ul>
 
       <ul id="edit-rotate">
@@ -144,28 +121,24 @@
             <i class="fa fa-times button-fig"></i>
           </a>
         </li>
-        <li class="tappable">
+        <li id="rotate-left" class="tappable">
           <a class="rotateButtom">
             <i class="fa fa-rotate-left button-fig"></i>
-            <span class="button-title">Rotate</span>
           </a>
         </li>
-        <li class="tappable">
+        <li id="rotate-right" class="tappable">
           <a class="rotateButtom">
             <i class="fa fa-rotate-right button-fig"></i>
-              <span class="button-title">Text</span>
           </a>
         </li>
         <li class="tappable">
           <a class="rotateButtom">
             <i class="fa fa-arrows-h button-fig"></i>
-              <span class="button-title">Effect</span>
           </a>
         </li>
         <li class="tappable">
           <a class="rotateButtom">
             <i class="fa fa-arrows-v button-fig"></i>
-              <span class="button-title">Frame</span>
           </a>
         </li>
         <li class="tappable">
