rotate, flip done. buggy.

--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
             <i class="fa fa-rotate-right button-fig"></i>
           </a>
         </li>
-        <li class="tappable">
+        <li id="flip-hoz" class="tappable">
           <a class="rotateButtom">
             <i class="fa fa-arrows-h button-fig"></i>
           </a>
         </li>
-        <li class="tappable">
+        <li id="flip-vtc" class="tappable">
           <a class="rotateButtom">
             <i class="fa fa-arrows-v button-fig"></i>
           </a>
@@ -195,6 +195,7 @@
   <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
   <script type="text/javascript" src="js/fabric.js.all.min.js"></script>
   <script type="text/javascript" src="js/jquery.rotate.1-1.js"></script>
+  <script type="text/javascript" src="js/jquery.imageFlip.js"></script>
   <script type="text/javascript" src="js/foxcam.js"></script>
 </body>
 </html>
