flip almost done.

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
   <script type="text/javascript" src="js/fabric.js.all.min.js"></script>
   <script type="text/javascript" src="js/jquery.rotate.1-1.js"></script>
-  <script type="text/javascript" src="js/jquery.imageFlip.js"></script>
+  <script type="text/javascript" src="js/jquery.imageFlip.min.js"></script>
   <script type="text/javascript" src="js/foxcam.js"></script>
 </body>
 </html>
