--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/central.css" type="text/css"/>
 </head>
 <body>
-  <div>
+  <div id="head">
     <x-appbar id="navigator">
       <div id="back">
         <li class="tappable">
@@ -50,14 +50,19 @@
     </div>
 
     <div id="edit-screen" class="page" data-page-no="2">
-        <div id="image-canvas-wrapper"></div>
-        <div class="inner">
-          <span class="wrapper tappable">
-            <i id="choose-image" class="fa fa-file tappable"></i>
-          </span>
+      <div id="image-canvas-wrapper"></div>
+      <div class="inner">
+        <span class="wrapper tappable">
+          <i id="choose-image" class="fa fa-file tappable"></i>
+        </span>
+      </div>
+  
+      <div id="fabric-zone">
+        <canvas id="playground"></canvas>
+        <div id="text-zone">
+          <textarea id="textInput" name="text" placeholder="Write something..."></textarea>
         </div>
-        <div id="stamps-zone">
-          <canvas id="playground"></canvas>
+        <div id="stamps-zone" class="fabric-zone">
           <ul>
             <li class="stamp">
               <img src="images/stamps/smiley.png" />
@@ -68,8 +73,24 @@
             <li class="stamp">
               <img src="images/stamps/foxmosa.png" />
             </li>
+            <li class="stamp">
+              <img src="images/stamps/bill.png" />
+            </li>
+            <li class="stamp">
+              <img src="images/stamps/cake.png" />
+            </li>
+            <li class="stamp">
+              <img src="images/stamps/owl.png" />
+            </li>
+            <li class="stamp">
+              <img src="images/stamps/mustache.png" />
+            </li>
+            <li class="stamp">
+              <img src="images/stamps/heart.png" />
+            </li>
           </ul>
         </div>
+      </div>
     </div>
     <div id="collage-screen" class="page" data-page-no="2">
       collage page
@@ -83,7 +104,7 @@
     <div id="intro-footer">
     </div>
     <div id="edit-footer" class="footer" footer-page-no="1">
-      <ul>
+      <ul id="edit-intro">
         <li class="tappable">
           <a id="crop_button">
             <i class="fa fa-crop button-fig"></i>
@@ -97,7 +118,7 @@
           </a>
         </li>
         <li class="tappable">
-          <a>
+          <a id="text_button">
             <i class="fa fa-font button-fig"></i>
               <span class="button-title">Text</span>
           </a>
@@ -194,6 +215,18 @@
         <li class="tappable">
           <a class="effectButton">
             <i class="fa fa-check button-fig"></i>
+          </a>
+        </li>
+      </ul>
+	  <ul id="edit-text">
+        <li class="tappable">
+          <a class="textButton">
+            <i class="fa fa-check button-fig"></i>
+          </a>
+        </li>
+        <li class="tappable">
+          <a class="textButton">
+            <i class="fa fa-times button-fig"></i>
           </a>
         </li>
       </ul>
