Effect on preview image and original image. 2 effect added.

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
       </ul>
 
       <ul id="edit-effect">
-        <li id="effect-cancel" class="tappable effect-setting" data-setting-check="false">
-          <a class="effectButton">
+        <li id="effect-cancel" class="tappable effect-setting">
+          <a class="effectButton effects" data-effect-id="0" data-setting-check="false">
             <i class="fa fa-times button-fig"></i>
           </a>
         </li>
@@ -208,8 +208,8 @@
             </a>
           </li>
         </div>
-        <li id="effect-check" class="tappable effect-setting" data-setting-check="true">
-          <a class="effectButton">
+        <li id="effect-check" class="tappable effect-setting">
+          <a class="effectButton effects" data-effect-id="0" data-setting-check="true">
             <i class="fa fa-check button-fig"></i>
           </a>
         </li>
