--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <li class="tappable">
             <a id="effect-4" class="rotateButton effects" data-effect-id="4">
               <i class="fa fa-circle"></i>
-              <span class="button-title">SinCity</span>
+              <span class="button-title">Grungy</span>
             </a>
           </li>
           <li class="tappable">
