--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </a>
         </li>
         <li class="tappable">
-          <a>
+          <a id="frame-button" class='under-dev'>
             <i class="fa fa-credit-card button-fig"></i>
               <span class="button-title">Frame</span>
           </a>
@@ -246,6 +246,7 @@
         about-footer
     </div>
   </div>
+  <script type="text/javascript" src="js/base.js"></script>
   <script type="text/javascript" src="js/brick-0.9.1.byob.min.js"></script>
   <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
   <script type="text/javascript" src="js/fabric.min.js"></script>
