--- a/index.html
+++ b/index.html
@@ -84,10 +84,15 @@
       </div>
     </div>
     <div id="collage-screen" class="page" data-page-no="2">
-      collage page
+      <i id="collage-under-dev" class="fa fa-cog fa-spin"></i>
+      <p id="collage-under-dev-text">It's under development.</p>
     </div>
     <div id="about-screen" class="page" data-page-no="3">
-      about page
+      <img src="/images/logo03.png" width="200" height="200" ></img>
+      <h2>About this APP</h2>
+      <p>
+        Foxcam is the easiest way to editing, recreating and sharing photos. You can do even more by submitting new frames, icons and your unique designs. You'll not only become a photographer but also a camera function designing master with Foxcam.
+      </p>
     </div>
 
   </div> 
@@ -176,38 +181,40 @@
             <i class="fa fa-times button-fig"></i>
           </a>
         </li>
-        <div id="scrollBar">
-          <li class="tappable">
-            <a id="effect-1" class="rotateButton effects" data-effect-id="1">
-              <i class="fa fa-circle"></i>
-              <span class="button-title">Vintage</span>
-            </a>
-          </li>
-          <li class="tappable">
-            <a id="effect-2" class="rotateButton effects" data-effect-id="2">
-              <i class="fa fa-circle"></i>
-              <span class="button-title">Lomo</span>
-            </a>
-          </li>
-          <li class="tappable">
-            <a id="effect-3" class="rotateButton effects" data-effect-id="3">
-              <i class="fa fa-circle"></i>
-              <span class="button-title">Sunrise</span>
-            </a>
-          </li>
-          <li class="tappable">
-            <a id="effect-4" class="rotateButton effects" data-effect-id="4">
-              <i class="fa fa-circle"></i>
-              <span class="button-title">Grungy</span>
-            </a>
-          </li>
-          <li class="tappable">
-            <a id="effect-5" class="rotateButton effects" data-effect-id="5">
-              <i class="fa fa-circle"></i>
-              <span class="button-title">Jarques</span>
-            </a>
-          </li>
-        </div>
+        <li id="scroll-bar-wrapper">
+          <ul id="scrollBar">
+            <li class="tappable">
+              <a id="effect-1" class="rotateButton effects" data-effect-id="1">
+                <i class="fa fa-circle"></i>
+                <span class="button-title">Vintage</span>
+              </a>
+            </li>
+            <li class="tappable">
+              <a id="effect-2" class="rotateButton effects" data-effect-id="2">
+                <i class="fa fa-circle"></i>
+                <span class="button-title">Lomo</span>
+              </a>
+            </li>
+            <li class="tappable">
+              <a id="effect-3" class="rotateButton effects" data-effect-id="3">
+                <i class="fa fa-circle"></i>
+                <span class="button-title">Sunrise</span>
+              </a>
+            </li>
+            <li class="tappable">
+              <a id="effect-4" class="rotateButton effects" data-effect-id="4">
+                <i class="fa fa-circle"></i>
+                <span class="button-title">Grungy</span>
+              </a>
+            </li>
+            <li class="tappable">
+              <a id="effect-5" class="rotateButton effects" data-effect-id="5">
+                <i class="fa fa-circle"></i>
+                <span class="button-title">Jarques</span>
+              </a>
+            </li>
+          </ul>
+        </li>
         <li id="effect-check" class="tappable effect-setting">
           <a class="effectButton effects" data-effect-id="0" data-setting-check="true">
             <i class="fa fa-check button-fig"></i>
@@ -240,10 +247,8 @@
       </ul>
     </div>
     <div id="collage-footer" class="footer" footer-page-no="2">
-        collage-footer
     </div>
     <div id="about-footer" class="footer" footer-page-no="3">
-        about-footer
     </div>
   </div>
   <script type="text/javascript" src="js/base.js"></script>
@@ -253,6 +258,6 @@
   <script type="text/javascript" src="js/jquery.rotate.1-1.js"></script>
   <script type="text/javascript" src="js/caman.full.min.js"></script>
   <script type="text/javascript" src="js/foxcam.js"></script>
-  <script type="text/javascript" src="js/myFilter.js"></script>
+  <script type="text/javascript" src="js/saveImage.js"></script>
 </body>
 </html>
